# utd-cs6375-hw4

./: .editorconfig  .flake8  .gitignore  LICENSE.txt  README.md  pyproject.toml  pyrightconfig.json
src/hw4/: _utils.py  expectation_maximization.py  independent.py  tree.py
