[tool.poetry]
name = "utd-cs6375-hw4"
version = "0.1.0"
description = ""
authors = ["Travis C. LaGrone <22419287+travis-c-lagrone@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^0.25.3"
cython = "^0.29.14"
scikit-learn = "^0.21.3"

[tool.poetry.dev-dependencies]
prospector = { version = "^1.1", extras = ["with_vulture"] }
isort = "^4.3"
pytest = "^5.2"
requests = "^2.22"
black = "19.10b0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
