[tool.poetry]
name = "utd-cs6375-hw4"
version = "0.1.0"
description = ""
authors = ["Travis C. LaGrone <22419287+travis-c-lagrone@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^0.25.3"
cython = "^0.29.14"
scikit-learn = "^0.21.3"
networkx = "^2.4"

[tool.poetry.dev-dependencies]
flake8 = "^3.7"
flake8-bandit = "^2.1"
flake8-bugbear = "^19.8"
flake8-docstrings = "^1.5"
flake8-isort = "^2.7"
isort = "^4.3"
black = "19.10b0"
pytest = "^5.2"
requests = "^2.22"
docformatter = {version = "^1.3", optional = true}

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
